recursion.cons.lessons.recursion.cons.ButLast.scala.error
butLast:6: error: type mismatch;
 found   : Int
 required: List[Int]
	return l.head::butLast(l.head);
                                 ^